--- a/src/components/Teacher/TeacherProfile.css
+++ b/src/components/Teacher/TeacherProfile.css
@@ -28,6 +28,38 @@
     font-weight: bold;
 }
 
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.overlay-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.CRUD-loading-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 170px;
+    height: 100vh;  /* Remplir la hauteur de la fenêtre */
+    width: 100%;
+    position: absolute;  /* Position absolue pour s'assurer que le loader soit au-dessus de tout autre contenu */
+    top: 0;
+    left: 0;   
+}
+
 
 .teacher-details p strong {
     color: #2c3e50;
