--- a/src/components/Teacher/TeacherProfile.css
+++ b/src/components/Teacher/TeacherProfile.css
@@ -121,6 +121,34 @@
     margin-left: 10px;
 }
 
+.tooltip-container {
+position: relative;
+    display: inline-block;
+}
+
+.tooltip-text {
+    visibility: hidden;
+    width: max-content;
+    /* Ajuste automatiquement la largeur */
+    background-color: #333;
+    color: #fff;
+    text-align: left;
+    padding: 5px;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    /* Place l'info-bulle au-dessus */
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: pre-wrap;
+    /* Permet d'afficher plusieurs lignes */
+}
+
+.tooltip-container:hover .tooltip-text {
+    visibility: visible;
+}
+
 .payment-status-button {
     display: inline-block;
     padding: 5px 10px;
