--- a/src/components/Resetpassword/ResetPasswordForm.css
+++ b/src/components/Resetpassword/ResetPasswordForm.css
@@ -48,7 +48,7 @@ h2 {
 .input-group input:focus {
     border-color: #355a85;
     outline: none;
-    box-shadow: 0 0 5px rgba(53, 90, 133, 0.5);
+    /* box-shadow: 0 0 5px rgba(53, 90, 133, 0.5); */
 }
 
 .submit-button {
