--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -392,4 +392,8 @@
     .loading-container {
         margin-left: 0;
     }
+    .event-form {
+        margin-top: 300px;
+        margin-right: -500px !important;
+    }
 }
