--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -560,4 +560,18 @@
     .send-button {
         font-size: 12px; /* Réduit la taille du bouton */
     }
+    .user-profile-picture {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin-right: 15px;
+        object-fit: cover;
+        margin-top:-13px;
+    }
+    .last-message-preview {
+        margin-top: 7px;
+        font-size: 14px;
+        color: #555;
+        margin-right:5px;
+    }
 }
